<resources>
    <string name="app_name">AniketBuilder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigate">Navigate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Aniket Builder</string>
    <string name="nav_header_subtitle">aniketsingh12899@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="view_gallery">Gallery</string>
    <string name="locations">Locations</string>
    <string name="testimonials">Testimonials</string>
    <string name="contact_us">Contact Us</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="title_activity_map">Map</string>
    <string name="google_maps_key">AIzaSyA5FjVPyOeOx7Ifyy79hHqpLuKanns4Go</string>
</resources>
