<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/view_gallery"
            android:title="@string/view_gallery" />
        <item
            android:id="@+id/locations"
            android:title="@string/locations" />
        <item
            android:id="@+id/testimonials"
            android:title="@string/testimonials" />
        <item
            android:id="@+id/contact_us"
            android:title="@string/contact_us" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/share"
                android:title="@string/share" />
            <item
                android:id="@+id/send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
