<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/view_gallery">

    <fragment
        android:id="@+id/view_gallery"
        android:name="com.example.aniketbuilder.ui.gallery.GalleryFragment"
        android:label="@string/view_gallery"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/locations"
        android:name="com.example.aniketbuilder.ui.locations.HomeFragment"
        android:label="@string/locations"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/testimonials"
        android:name="com.example.aniketbuilder.ui.testmonials.SlideshowFragment"
        android:label="@string/testimonials"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/contact_us"
        android:name="com.example.aniketbuilder.ui.contactus.ToolsFragment"
        android:label="@string/contact_us"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/share"
        android:name="com.example.aniketbuilder.ui.share.ShareFragment"
        android:label="@string/share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/send"
        android:name="com.example.aniketbuilder.ui.send.SendFragment"
        android:label="@string/send"
        tools:layout="@layout/fragment_send" />
</navigation>